--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1497,3 +1497,79 @@ publisher = {World Scientific
 address = {New Jersey, USA}
 }
 
+
+@article{cisneros-montemayor_ecosystem-based_2020,
+	title = {Ecosystem-based management can contribute to cooperation in transboundary fisheries: {The} case of pacific sardine},
+	volume = {221},
+	issn = {01657836},
+	shorttitle = {Ecosystem-based management can contribute to cooperation in transboundary fisheries},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0165783619302565},
+	doi = {10.1016/j.fishres.2019.105401},
+	language = {en},
+	urldate = {2021-07-13},
+	journal = {Fisheries Research},
+	author = {Cisneros-Montemayor, Andrés M and Ishimura, Gakushi and Munro, Gordon R. and Sumaila, U. Rashid},
+	month = jan,
+	year = {2020},
+	pages = {105401},
+	file = {Cisneros-Montemayor et al. - 2020 - Ecosystem-based management can contribute to coope.pdf:/Users/jepa/Zotero/storage/G92WY6JU/Cisneros-Montemayor et al. - 2020 - Ecosystem-based management can contribute to coope.pdf:application/pdf},
+}
+
+
+@article{cheung_marine_2021,
+	title = {Marine high temperature extremes amplify the impacts of climate change on fish and fisheries},
+	volume = {7},
+	issn = {2375-2548},
+	url = {https://www.science.org/doi/10.1126/sciadv.abh0895},
+	doi = {10.1126/sciadv.abh0895},
+	language = {en},
+	number = {40},
+	urldate = {2021-10-28},
+	journal = {Science Advances},
+	author = {Cheung, William W. L. and Frölicher, Thomas L. and Lam, Vicky W. Y. and Oyinlola, Muhammed A. and Reygondeau, Gabriel and Sumaila, U. Rashid and Tai, Travis C. and Teh, Lydia C. L. and Wabnitz, Colette C. C.},
+	month = oct,
+	year = {2021},
+	pages = {eabh0895},
+	file = {supplements:/Users/jepa/Zotero/storage/SIRSRB4K/Cheung et al. - 2021 - Marine high temperature extremes amplify the impac.pdf:application/pdf;cheung_mh2021:/Users/jepa/Zotero/storage/JYYUJJHZ/cheung_mh2021.pdf:application/pdf},
+}
+
+
+@techreport{iphc_iphc_2016_report_2016,
+	title = {IPHC Annual Report},
+	institution = {International Pacific Halibut Commission},
+	author = {IPHC},
+	year = {2016},
+	pages = {86},
+	file = {iphc_2016_report:/Users/jepa/Zotero/storage/XAZIXSL6/iphc_2016_report.pdf:application/pdf},
+}
+
+@techreport{NOAA_scen_plan_2020,
+	title = {Scenario Planning: An Introduction for Fishery Managers},
+	institution = {U.S. Dept. of Commer., NOAA. NOAA Technical Memorandum NMFS-OSF-9},
+	author = {Frens, Kathryn M. and Wendy E. Morrison.},
+	year = {2020},
+	pages = {38},
+	
+}
+
+
+
+@article{trisos_projected_2020,
+	title = {The projected timing of abrupt ecological disruption from climate change},
+	volume = {580},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2189-9},
+	doi = {10.1038/s41586-020-2189-9},
+	language = {en},
+	number = {7804},
+	urldate = {2021-11-29},
+	journal = {Nature},
+	author = {Trisos, Christopher H. and Merow, Cory and Pigot, Alex L.},
+	month = apr,
+	year = {2020},
+	pages = {496--501},
+	file = {Submitted Version:/Users/jepa/Zotero/storage/ASXQVZ8R/Trisos et al. - 2020 - The projected timing of abrupt ecological disrupti.pdf:application/pdf},
+}
+
+
+
