Included abstracts in spanish and portuguese

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -303,7 +303,7 @@ read.csv("../Tables/kw_habitat.csv") %>%
   kable(
         booktabs = T,
         longtable = T,
-        caption = "Statistical results for multiple comparison test after Kruskal-Wallis on time of emergence across United Nations sub regions"
+        caption = "Statistical results for multiple comparison test after Kruskal-Wallis on time of emergence across species habitat association according to FishBase and SeaLifeBase"
   ) %>% 
   kable_styling(#full_width = T,
                 position = "center")
@@ -336,3 +336,17 @@ read.csv("../Tables/kw_regional.csv") %>%
 ```
 
 \end{landscape}
+
+# Translated Abstracts
+
+Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance. Coupling a large ensemble simulation of an Earth system model to a dynamic population model, we show that by 2030, under a high emission climate change scenario, 23% of transboundary stocks will have shifted and 78% of the world’s EEZs will have experienced at least one shifting stock. By the end of this century, projections under a high emissions scenario show 81% of EEZs waters with at least one shifting stock and a total of 45% of stocks shifting globally. Many countries that are highly dependent on fisheries for livelihood and food security emerge as hotspots for transboundary shifts. These hotspots are characterized by early shifts in the distribution of a important number of transboundary stocks. Existing fisheries agreements need to be assessed for their capacity to address the social-ecological implications of climate change driven transboundary shifts and strengthened where necessary to limit potential conflict between the parties of interest, while new agreements need to be anticipatory and consider these concerns to be resilient to global change.
+
+## Español
+
+El cambio climático está afectando la distribución de poblaciones transfronterizas de fauna marina que se encuentran en Zonas Económicas Exclusivas (ZEEs) de países vecinos y en el alta mar. Los efectos del cambio climático en el manejo pesquero internacional estarán determinados por la escala temporal de dichos desplazamientos. Para determinar esa escala temporal, el presente estudio combinó un modelo dinámico poblacional, con una serie de simulaciones de un modelo del sistema terrestre, bajo un escenario de cambio climático de altas emisiones. Los resultados siguieren que para 2030, el 23% de las poblaciones transfronterizas se habrán desplazado y en el 78% de las ZEEs del mundo habrán experimentado cambios en la distribución de al menos una población transfronteriza. Para fines de este siglo, las proyecciones muestran que el 45% de las poblaciones transfronterizas globales habrán cambiado su distribución y 81% de las ZEEs tendrán al menos una población en movimiento. La magnitud de tal desplazamiento se reflejará en un cambio promedio del 59% de la proporción de captura de poblaciones transfronterizas entre ZEEs vecinas para el 2030. Muchos países que dependen de la pesca para sustento económico y seguridad alimentaria emergen como zonas críticas de cambios transfronterizos. Estas zonas se caracterizan por cambios tempranos en la distribución de un número importante de poblaciones transfronterizas. Por lo tanto, los acuerdos pesqueros internacionales deben evaluarse por su capacidad para responder a los impactos socio-ecológicos del desplazamiento de poblaciones transfronterizas debido al cambio climático. Dichos acuerdos deberán fortalecerse, cuando sea necesario, para limitar los posibles conflictos entre las partes de interés y evitar amenazar la sustentabilidad del recurso. Así mismo, los nuevos acuerdos que vayan a establecerse deberán considerar los posibles cambios en la distribución de poblaciones compartidas (y la incertidumbre asociada) para anticiparse a dichos conflictos y aumentar la resiliencia frente al cambio climático.
+
+## François 
+
+## Português 
+
+As mudanças climáticas vêm promovendo alterações na distribuição dos estoques de peixes compartilhados por países vizinhos, tanto nas suas Zonas Econômicas Exclusivas (ZEE) como em águas oceânicas internacionais. A escala de tempo desse deslocamento transfronteiriço vai determinar como as mudanças climáticas afetarão o manejo pesqueiro internacional. Diante disso, no presente trabalho teve o objetivo de analisar essa escala de tempo, combinando um amplo conjunto de simulações de um modelo do sistema terrestre sob um cenário de mudanças climáticas de altas emissões a um modelo de dinâmica populacional. Foi observado que, para 2030, 23% dos estoques transfronteiriços terão suas distribuições alteradas e 78% das ZEEs do mundo terão experimentado deslocamentos em pelo menos um estoque transfronteiriço. No final deste século, as projeções mostram que 45% dos estoques transfronteiriços do mundo sofrerão alterações, e que 81% das ZEEs apresentarão alterações em pelo menos um estoque. A magnitude de tal deslocamento será refletida por uma mudança média de 59% na proporção de capturas de estoques transfronteiriços entre ZEEs vizinhas no ano de 2030. Muitos países que são altamente dependentes da pesca para subsistência e segurança alimentar surgem como pontos críticos para mudanças transfronteiriças. Estes são caracterizados por mudanças iniciais na distribuição de um número importante de estoques. Os acordos internacionais de pesca precisam ser avaliados quanto à sua capacidade de abordar as implicações socioecológicas de deslocamentos transfronteiriços impulsionados pelas mudanças climáticas, e reforçados quando necessário no sentido de minimizar possíveis conflitos entre as partes de interesse. Da mesma forma, novos acordos devem considerar possíveis mudanças na distribuição de populações transfronteiriças, a fim de antecipar tais conflitos e construir resiliência em face das mudanças climáticas e das incertezas que as acompanha. 
